@startuml
'https://plantuml.com/sequence-diagram


class createList
{
+String title
+String[] items
+String[] description
+String[] dueDate
+int[] completed

+public void createList()
}
 createList -- app

class display
{
+public void displayAll()
+public void displayComplete()
+public void displayIncomplete();
 }
display <-- app

class edit
{
+public void addItem()
+public void removeTodoList()
+public void removeItem()
+public void editTitle()
+public void editDueDate()
+public void markDone()
}
edit -- app

class saveOrLoad
{
+public void saveToDoList()
+public void saveAllToDoList()
+public void loadToDoList()
+public void loadAllToDoList()
}
saveOrLoad <-- app

class app
{
+public void main()

}
@enduml